Fixed url when episode searched is inferior to 10